solkit (0.5.0) unstable; urgency=medium

  * A lot of new solitaires ---- describe
  * New rule for first foundation card: random|column

 -- Vladimir Markelov <vmatroskin@gmail.com>  ///

solkit (0.4.8) unstable; urgency=medium

  * Hotkey 'Shift+s' to show current card valid destinations
  * Hotkey 's' did not show hints if any card was marked
  * Fixed bug: Escape in menu dialogs did not work as expected. Instead of
    returning to the previous stage, it exited the application

 -- Vladimir Markelov <vmatroskin@gmail.com>  Fri, 01 Jan 2021 18:46:23 -0800

solkit (0.4.7) unstable; urgency=medium

  * Bump packages

 -- Vladimir Markelov <vmatroskin@gmail.com>  Fri, 25 Dec 2020 13:49:55 -0800

solkit (0.4.6) unstable; urgency=medium

  * Hide and restore terminal cursor
  * Fix a bug with card face encoding
  * Code cleanup

 -- Vladimir Markelov <vmatroskin@gmail.com>  Thu, 24 Dec 2020 16:52:49 -0800

solkit (0.4.5) unstable; urgency=medium

  * Logging is disabled by default
  * Added command-line option `--log` to enable logging

 -- Vladimir Markelov <vmatroskin@gmail.com>  Tue, 22 Dec 2020 13:14:31 -0800

solkit (0.4.4) unstable; urgency=medium

  * Added documetation
  * Example solitaire fixes

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 20 Dec 2020 19:57:41 -0800

solkit (0.4.3) unstable; urgency=medium

  * Added "American toad" solitaire

 -- Vladimir Markelov <vmatroskin@gmail.com>  Mon, 07 Dec 2020 10:56:30 -0800

solkit (0.4.0) unstable; urgency=medium

  * Loading custom solitaire rules

 -- Vladimir Markelov <vmatroskin@gmail.com>  Fri, 27 Nov 2020 19:43:49 -0800