@@ -97,4 +97,7 @@ impl Strategy for FinalStg {
         }
         Ok(())
     }
+
+    fn on_activate(&self, _ctx: &mut Context) {}
+    fn on_deactivate(&self, _ctx: &mut Context) {}
 }
