@@ -2,6 +2,8 @@ solkit (0.5.0) unstable; urgency=medium
 
   * A lot of new solitaires ---- describe
   * New rule for first foundation card: random|column
+  * Solkit tracks time spent on each solitaire and displays the total time in
+    solitaire list dialog
 
  -- Vladimir Markelov <vmatroskin@gmail.com>  ///
 
